Implementando Seccion Miembros del Equipo

--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -311,18 +311,38 @@
 	<div class="Miembros bg-light">
 		<br>
 		<br>
-		<div class="container mt-5 text-center">
+		<div class="MiembEquip container mt-5 text-center">
 			<h1 class="Miemb">
 				<b>MIEMBROS DEL EQUIPO</b>
 			</h1>
 			<br>
 			<br>
 			<div class="row">
-				<div class="col-4 d-flex justify-content-center align-items-center mt-4 mb-4">
+				<div class="col-3 d-flex justify-content-center align-items-center mt-4 mb-4">
+					<div class="card" style="width: 30rem;">
+						<img src="../img/JoseLuis.jpeg" class="ImagenCard card-img-top" alt="...">
+						<div class="card-body">
+							<h3 class="card-title">Adrina Rodas Cueto</h3>
+							<p class="card-text">Desarrollador
+							</p>
+						</div>
+						<ul class="list-group list-group-flush">
+							<li class="list-group-item">An item</li>
+							<li class="list-group-item">A second item</li>
+							<li class="list-group-item">A third item</li>
+						</ul>
+						<div class="card-body">
+							<a href="#" class="card-link">Card link</a>
+							<a href="#" class="card-link">Another link</a>
+						</div>
+					</div>
+				</div>
+				
+				<div class="col-3 d-flex justify-content-center align-items-center mt-4 mb-4">
 					<div class="card" style="width: 30rem;">
 						<img src="../img/Foto1.jpeg" class="ImagenCard card-img-top" alt="...">
 						<div class="card-body">
-							<h3 class="card-title">José Luis Domínguez Echevarria</h3>
+							<h3 class="card-title">José Luis Domínguez E.</h3>
 							<p class="card-text">Desarrollador
 							</p>
 						</div>
@@ -338,13 +358,12 @@
 					</div>
 				</div>
 	
-				<div class="col-4 d-flex justify-content-center align-items-center mt-4 mb-4">
+				<div class="col-3 d-flex justify-content-center align-items-center mt-4 mb-4">
 					<div class="card" style="width: 30rem;">
-						<img src="../img/Desarrollo.jpg" class="ImagenCard card-img-top" alt="...">
+						<img src="../img/Yilber.jpeg" class="ImagenCard card-img-top" alt="...">
 						<div class="card-body">
-							<h3 class="card-title">Adrian Rodas Cueto</h3>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of
-								the card's content.
+							<h3 class="card-title">Yilber Serrano Figueredo</h3>
+							<p class="card-text">Desarrollador
 							</p>
 						</div>
 						<ul class="list-group list-group-flush">
@@ -358,14 +377,13 @@
 						</div>
 					</div>
 				</div>
-	
-				<div class="col-4 d-flex justify-content-center align-items-center mt-4 mb-4">
+				
+				<div class="col-3 d-flex justify-content-center align-items-center mt-4 mb-4">
 					<div class="card" style="width: 30rem;">
-						<img src="../img/Desarrollo.jpg" class="ImagenCard card-img-top" alt="...">
+						<img src="../img/Yilber.jpeg" class="ImagenCard card-img-top" alt="...">
 						<div class="card-body">
-							<h3 class="card-title">Adrian Rodas Cueto</h3>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of
-								the card's content.
+							<h3 class="card-title">Yilber Serrano Figueredo</h3>
+							<p class="card-text">Desarrollador
 							</p>
 						</div>
 						<ul class="list-group list-group-flush">
