--- a/src/main/resources/static/css/myStyle.css
+++ b/src/main/resources/static/css/myStyle.css
@@ -152,7 +152,7 @@
 	position: relative;
 	top: -130px;
 	border-top-right-radius: 40%;
-	background-image: linear-gradient(180deg, rgb(227, 227, 227), #FBFBFB );
+	background-color: rgb(227, 227, 227);
 }
 .Mc{
 	position: relative;
@@ -292,19 +292,19 @@
 
 .HojaRuta{
 	position: relative;
-	top: -350px;
+	top: -300px;
 	border-top-left-radius: 10%;
 	border-top-right-radius: 10%;
-	background-image: linear-gradient(180deg, rgb(227, 227, 227), #FBFBFB );
+	background-color: rgb(227, 227, 227);
 }
 .Fases{
 	position: relative;
 	top: -300px;
-	transition: top 0.5s;
+	transition: top 0.7s;
 }
 .FasesDesp{
 	position: relative;
-	top: -50px;
+	top: -40px;
 }
 .Hoj{
 	color: transparent;
@@ -382,10 +382,27 @@
 }
 
 .Miembros{
+	border-top-left-radius: 50%;
+	border-top-right-radius: 50%;
 	height: 600px;
 	position: relative;
-	top: -400px;
-	box-shadow: 0px -10px 20px rgb(0,0,0,0.5);
+	top: -450px;
+}
+.MiembEquip{
+	position: relative;
+	top: -150px;
+	transition: top 0.5s;
+}
+.MiembEquipDesp{
+	position: relative;
+	top: -1px;
+}
+.Miemb{
+	color: transparent;
+	transition: color 0.3s;
+}
+.MiembDesp{
+	color: black;
 }
 .ImagenCard{
 	height: 300px;
