Se realizan correcciones

--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -32,7 +32,7 @@
 							<a class="link nav-link" href="#HojaRuta">DESARROLLO</a>
 						</li>
 						<li class="nav-item">
-							<a class="link nav-link" href="#HojaRuta">MIEMBROS DEL EQUIPO</a>
+							<a class="link nav-link" href="#Miembros">MIEMBROS DEL EQUIPO</a>
 						</li>
 					</ul>
 					<form class="d-flex">
